[tool.poetry]
name = "tablo-saver"
version = "1.0.0"
description = "Save recordings from tablo external drive"
authors = ["Charles Wilson <cwilson@nowhere>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
dataclasses-json = "^0.6.2"

[tool.poetry.group.dev.dependencies]
rope = "^1.11.0"
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tablo-rescue = 'tablo_saver.rescue:main'